--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,11 +13,9 @@
         <% for(let p of posts) {%>
             <h2><%=p.username%></h2>
             <li><b><%=p.title%></b><b><%=p.price%></b><b><%=p.contactInfo%></b><b><%=p.description%></b>/li>
-        <%}%>
-      
-
-
+        <%}%>      
     </ul>
+    <a href="create">Create Post</a>
     <p>Home tab</p>
 </body>
 </html>
