fixed merging issues

--- a/views/create.ejs
+++ b/views/create.ejs
@@ -4,26 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <form method="post" action="/index">
+    <form method="post" action="index">
         <section>
-        <label fpr="username">Username:</label>
-        <input id="username" required>
+        <label for="username">Username:</label>
+        <input id="username" name="username" required>
     </section>
     <section>
-        <label fpr="title">Title:</label>
-        <input id="title" required>
+        <label for="title">Title:</label>
+        <input id="title" name="title" required>
     </section>
     <section>
-        <label fpr="price">Price:</label>
-        <input id="price" required>
+        <label for="price">Price:</label>
+        <input id="price" name="price" required>
     </section>
     <section>
-        <label fpr="contact">Contact:</label>
-        <input id="contact" required>
+        <label for="contact">Contact:</label>
+        <input id="contact" name="contact" required>
     </section>
     <section>
-        <label fpr="description">Description:</label>
-        <input id="description" required>
+        <label for="description">Description:</label>
+        <input id="description" name="description" required>
     </section>
     <a href="/index">Back</a>
     <button>Post</button>   
