--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
     <ul>
         <% for(let p of posts) {%>
             <h2><%=p.username%></h2>
-            <li><b><%=p.title%></b><b><%=p.price%></b><b><%=p.contactInfo%></b><b><%=p.description%></b>/li>
+            <li><b><%=p.title%></b><b><%=p.price%></b><b><%=p.contactInfo%></b><b><%=p.description%></b></li>
         <%}%>      
     </ul>
     <a href="create">Create Post</a>
